--- a/style.css
+++ b/style.css
@@ -1,93 +1,63 @@
-* {
-  min-width: 0;
-}
-
 body {
   font-family: Arial, sans-serif;
-  padding-top: 50px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  overflow: hidden;
-  table-layout: fixed;
-}
-
-th,
-td {
-  padding: 15px;
-  text-align: left;
-  border: 1px solid #ccc;
-}
-
-.days-number {
-  font-size: 12px;
-  background-color: #4c68af;
-  color: white;
-  padding: 2px 5px;
-}
-
-tr {
-  border-bottom: 1px solid #ddd;
-}
-
-tr:nth-child(even) {
-  background-color: #f4f4f4;
-}
-
-th {
-  background-color: #4c68af;
-  color: white;
-  text-transform: uppercase;
-  letter-spacing: 0.03em;
-}
-
-.doctor-grid {
-  display: grid;
-  grid-template-rows: repeat(var(--doctors), 1fr);
-}
-
-.doctor-cell {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 5px;
-  border-radius: 5px;
-  background-color: #e8e8e8;
-  text-transform: capitalize;
-}
-
-.slot {
+  padding: 20px;
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
-  border: 1px solid #ccc;
-  margin-bottom: 10px;
-  padding: 5px;
-}
-
-.time,
-.doctor {
-  font-weight: bold;
-}
-
-.doctor {
-  font-weight: bold;
-  border-top: 1px solid #ddd;
-}
-
-.doctor:first-child {
-  border-top: none;
+  align-items: center;
 }
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #f8f9fa;
+  width: 80%;
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+h1,
+h2 {
+  color: #333;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+#month-selector label,
+#year-selector label {
+  margin-bottom: 10px;
+}
+
+input[type="text"] {
   padding: 10px;
-  z-index: 1;
+  margin-bottom: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+input[type="button"] {
+  padding: 10px 20px;
+  border: none;
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+input[type="button"]:hover {
+  background-color: #0056b3;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #28a745;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: #218838;
 }
